# FTIV

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  build_release.bat  build_release.py  build_test.py  launcher.py  lint_report.txt  main.bat  main.py  nuitka-crash-report.xml  pyproject.toml  requirements.txt  translation_issues.md  verify_all.bat  verify_build_ready.bat  verify_debug.bat  verify_stress.bat
.agent/: README.md
.agent/handoff/: README.md
.agent/handoffs/: checklist.md
.agent/roles/: architect.md  code-reviewer.md  qa-engineer.md
.agent/scripts/: hook_pre_commit.py
.agent/skills/: qt_signal_slot_pattern.md
.agent/strategies/: ai_usage_strategy.md  quick_reference.md
.agent/workflows/: QUICKSTART.md  feature_dev_lifecycle.md  ftiv-dev.md  hybrid_ai_workflow.md  run_tests.md  tdd.md
.claude/: settings.local.json
.github/workflows/: ci.yml  ui_visual_regression.yml
assets/style/: theme.qss.template
backups/backup_20260206_143913/: text_archetype.json
backups/backup_20260206_144757/: text_defaults.json
backups/backup_20260206_150601/: text_archetype.json
backups/backup_20260206_155912/: text_archetype.json
backups/backup_20260206_162651/: app_settings.json
backups/backup_20260206_193540/: text_defaults.json  text_defaults_vertical.json
backups/backup_20260207_154210/: overlay_settings.json
backups/backup_20260207_215432/: text_archetype.json
backups/backup_20260207_222050/: app_settings.json
backups/backup_20260208_003546/: app_settings.json
config/perf/: phase9e_performance_thresholds.json  phase9e_scenarios.json
config/ui/: phase10b_visual_profiles.json  phase10c_visual_thresholds.json  phase10d_visual_gate_policy.json
docs/: PROJECT_STRUCTURE.md  RULES_AND_STANDARDS.md  RUNBOOK.md  git_guide.md  index.html
docs/codebase/: 00_codebase_survey_report.md  01_utils_details.md  02_models_details.md  03_managers_details.md  04_ui_controllers_details.md  05_ui_components_details.md  06_windows_details.md  07_main_entry_details.md  08_controllers_details.md  09_qa_and_testing_details.md  99_senior_engineer_critique.md  README.md
docs/guides/: AGENT_READING_LIST.md  git_guide.md  industry_standards_guide.md  phase2_test_quality_guide.md
docs/investigation/: 01_mainwindow_remaining_logic.md
docs/kako/: cleanup_legacy_settings.md  comprehensive_audit_plan.md  global_style_system_plan.md  gradient_ui_proposal.md  implementation_plan.md  modern_dev_env_plan.md  phase6_reliability_proposal.md  project_health_report_v2.md  reset_options_proposal.md  shadow_architecture_proposal.md  shadow_refinement_plan.md  spacing_ui_refinement_proposal.md  task.md  type_safety_roadmap.md  ux_improvements_v1.md  vertical_cutoff_fix.md  vertical_first_char_fix.md  vertical_metrics_refactoring.md  vertical_punctuation_fix.md  vertical_shadow_alignment_plan.md  vertical_spacing_refinement.md  vertical_text_positioning_fix.md  vertical_width_fix.md  walkthrough.md  walkthrough_global_style.md  walkthrough_gradient.md  walkthrough_reliability.md
docs/manual/: mindmap_folding_guide.md  追加されたスラッシュコマンド.md
docs/online_course_plan/: 00_master_plan.md  01_perspective_senior_engineer.md  02_perspective_udemy_export.md  03_perspective_ai_expert.md
docs/perf/: performance_contract.md
docs/public/: index.html
docs/refactoring_plans/: 00_task_progress_log.md  01_exception_handling.md  (+44 more)
json/: To Do List (オンライン講座.json  To Do List 一括b1.json  default_node_style.json  dialog_settings.json  mindmaps.json  overlay_settings.json  scenes_db.json  settings.json  ああああああああああああああああああ♡.json
managers/: animation_manager.py  app_mode_manager.py  bulk_manager.py  config_guardian.py  file_manager.py  info_index_manager.py  menu_manager.py  runtime_services.py  settings_manager.py  spacing_manager.py  style_manager.py  theme_manager.py  window_manager.py
models/: app_mode.py  constants.py  default_node_style.py  enums.py  mindmap_data.py  mindmap_node_config.py  protocols.py  spacing_settings.py  window_config.py  window_layer.py
scripts/: check_config_serialization.py  ci_perf_lane.py  ci_ui_visual_lane.py  debug_connector_label.py  debug_watchdog.py  generate_builtin_presets.py  generate_builtin_thumbnails.py  hook_pre_commit.py  measure_phase9e.py  migrate_legacy_data_to_v101.py  phase9e_perf_diff_report.py  pre_commit_check.py  reset_defaults.py  task_manager.py  ui_visual_diff_report.py  verify_defaults.py
tests/: conftest.py  repro_json_legacy.py  test_about_tab.py  test_animation_manager_extended.py  test_animation_tab.py  test_architecture_boundaries.py  test_base_window_logic.py  test_boundary_values.py  test_ci_perf_lane.py  test_ci_ui_visual_lane.py  test_connector_actions.py  test_connector_actions_extended.py  test_connector_extended.py  test_connector_logic.py  test_default_style.py  test_dialog_edit_flow.py  test_error_paths.py  test_file_manager_serialize.py  test_font_dialog_helper.py  test_hypothesis.py  test_image_actions.py  test_image_tab.py  test_image_window_logic.py  test_info_actions.py  test_info_index_manager.py  test_info_tab.py  test_inline_edit.py  test_layer_prerequisites.py  test_layer_reorder_command.py  test_layer_scene_roundtrip.py  test_layer_tab_behavior.py  test_layer_tab_drag_drop.py  test_layout_actions.py  test_legacy_naming_contract.py  test_main_controller.py  test_main_controller_extended.py  test_main_window_context_menu_routing.py  test_mainwindow_feedback.py  test_mainwindow_ui_scalability.py  test_migrate_legacy_data_to_v101.py  (+47 more)
tools/: audit_translation.py  check_ui_refs.py
ui/: action_priority_helper.py  context_menu.py  dialogs.py  main_window.py  main_window_wiring.py  property_panel.py  property_panel_orchestrator.py  reset_confirm_dialog.py  widgets.py
utils/: app_settings.py  commands.py  docs.py  due_date.py  edition.py  error_reporter.py  font_dialog.py  logger.py  overlay_settings.py  paths.py  reset_manager.py  tag_ops.py  theme_manager.py  translator.py  version.py
windows/: base_window.py  connector.py  image_window.py  text_renderer.py  text_window.py
(+125 files in other folders)
