[project]
name = "FTIV"
version = "0.1.0"
description = "Fast Text & Image Viewer for Overlay"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.8.0",
    "shiboken6>=6.8.0",
    "pillow>=10.0.0",
    "python-osc>=1.8.0",
    "pydantic>=2.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".venv314",
    ".venv313",
    "dist_test",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

# Target Python 3.14.
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I", "W"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.mypy]
files = ["ui", "managers", "windows", "models"]
ignore_missing_imports = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = false
disable_error_code = [
    # Phase 2 targets (medium risk):
    "attr-defined",
    "union-attr",
    "return-value",
    "arg-type",
    "assignment",
    # Phase 3 targets (higher risk):
    "import-untyped",
    "operator",
    "index",
    "func-returns-value",
    # Note: "var-annotated" and "has-type" now enabled (Phase 1 complete)
]

[dependency-groups]
dev = [
    "hypothesis>=6.0",
    "mypy>=1.0.0",
    "pre-commit>=4.5.1",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.9.0",
    "types-pyside6>=6.10.1.1",
]
